src/test/ui/traits/self-without-lifetime-constraint.stderr
error: `impl` item signature doesn't match `trait` item signature
  --> $DIR/self-without-lifetime-constraint.rs:45:5
   |
LL |     fn column_result(value: ValueRef<'_>) -> FromSqlResult<Self, &Self>;
   |     -------------------------------------------------------------------- expected `for<'r> fn(ValueRef<'r>) -> std::result::Result<(&str, &'r &str), FromSqlError>`
...
LL |     fn column_result(value: ValueRef<'_>) -> FromSqlResult<&str, &&str> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ found `for<'r> fn(ValueRef<'r>) -> std::result::Result<(&'r str, &'r &'r str), FromSqlError>`
   |
   = note: expected `for<'r> fn(ValueRef<'_>) -> std::result::Result<(&str, &'r &str), _>`
              found `for<'r> fn(ValueRef<'_>) -> std::result::Result<(&'r str, &'r &'r str), _>`
help: the lifetime requirements from the `impl` do not correspond to the requirements in the `trait`
  --> $DIR/self-without-lifetime-constraint.rs:41:60
   |
LL |     fn column_result(value: ValueRef<'_>) -> FromSqlResult<Self, &Self>;
   |                                                            ^^^^ consider borrowing this type parameter in the trait

error: aborting due to previous error

